# meterelf

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Dockerfile  README.rst  check-packaging  docker-meterelf  docker-run-with-x11  docker-waterwatch  problematic.txt  requirements-conda.txt  requirements-dev.txt  requirements-style.txt  requirements-test.txt  requirements-typing.txt  requirements.txt  setup.cfg  setup.py  tox.ini  value_db.py  visualize_data.py  waterwatch.py
integration-tests/: test_all_sample_files  test_all_sample_files.expected_stdout  test_all_sample_images  test_all_sample_images.expected_stdout
meterelf/: __init__.py  __main__.py  _api.py  _calibration.py  _colors.py  _db.py  _db_url.py  _debug.py  _fnparse.py  _image.py  _influxdb.py  _iter_utils.py  _main.py  _params.py  _reading.py  _sqlitedb.py  _timestamps.py  _types.py  _utils.py  _value_getter.py  db_copier.py  exceptions.py  image_file_reader.py  raw_db.py  value_db.py  value_file_reader.py  visualize_data.py
meterelf/store/: _db_url.py  _db_utils.py  _influxdb.py  _influxhelper.py  _sqlitedb.py  _time_utils.py  _timestamps.py  image_file_reader.py  process_data.py  value_file_reader.py  visualize_data.py
mypy-stubs/cv2/: __init__.pyi
sample-images/: params.yml
sample-images1/: params.yml
sample-images2/: params.yml
tests/: sample-images1_stdout.txt  sample-images2_stdout.txt  test_main.py  test_meterelf.py  test_waterwatch.py
waterwatch/: __init__.py  _api.py  _calibration.py  _debug.py  _dial_data.py  _image.py  _main.py  _params.py  _reading.py  _types.py  _utils.py
