[metadata]
name = meterelf
version = 0.0.1
description = Meter Elf -- Meter reading util
long_description = file: README.rst
keywords = water meter, reading, computer vision, util
url = https://github.com/suutari/meterelf/
maintainer = Tuomas Suutari
maintainer_email = tuomas@nepnep.net
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Home Automation
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
include_package_data = True
packages = find:
install_requires =
    opencv-python~=3.0
    pyyaml
zip_safe = False

[options.entry_points]
console_scripts =
    meterelf = meterelf._main:main
    meterelf-images2db = meterelf.image_file_reader:main
    meterelf-valuefiles2db = meterelf.value_file_reader:main
    meterelf-visualize = meterelf.visualize_data:main

[bdist_wheel]
universal = 1

[prequ]
annotate = yes

requirements =
    -e .

requirements-dev =
    tox

requirements-style =
    flake8
    flake8-isort
    flake8-print
    pep8-naming

requirements-test =
    pytest
    pytest-cov

requirements-typing =
    mypy
    ./numpy-stubs


[mypy]
mypy_path = mypy-stubs
follow_imports = error
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
no_implicit_optional = True
strict_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True

[mypy-setup]
ignore_errors = True

[tool:pytest]
norecursedirs = .* build dist .tox numpy-stubs

[flake8]
exclude = .tox,build/lib,dist,numpy-stubs

[isort]
multi_line_output = 4
skip = .tox,dist,numpy-stubs
not_skip = __init__.py
known_first_party = meterelf
known_standard_library = dataclasses
default_section = THIRDPARTY
